# mbd

./: Cargo.toml  Makefile  README.md  config.example.toml  mbd.service
src/: config.rs  daemon.rs  main.rs
