[package]
name = "mbd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.12"
futures = "0.3"
uuid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
